--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   supabase_flutter: ^2.6.0
   logger: ^2.4.0
+  image_picker: ^0.8.7+3
 
 dev_dependencies:
   flutter_test:
