--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   supabase_flutter: ^2.6.0
   logger: ^2.4.0
   image_picker: ^0.8.7+3
+  sqflite: ^2.3.3+1
+  get_it: ^7.7.0
 
 dev_dependencies:
   flutter_test:
