--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   hive: ^2.2.3
   pull_to_refresh_flutter3: ^2.0.2
   popover: ^0.3.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
