--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   pull_to_refresh_flutter3: ^2.0.2
   popover: ^0.3.1
   intl: ^0.19.0
+  dropdown_button2: ^2.3.9
 
 dev_dependencies:
   flutter_test:
