--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,3 +1,4 @@
+
 name: omborchi
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
@@ -35,7 +36,7 @@ dependencies:
   get: ^4.6.6
   flutter_bloc: ^8.1.6
   flutter_svg: ^2.0.10+1
-  internet_connection_checker: ^2.0.0
+  internet_connection_checker: ^1.0.0+1
   isar: *isar_version
   isar_flutter_libs: *isar_version # contains Isar Core
   path_provider: ^2.0.15
@@ -45,6 +46,9 @@ dependencies:
   popover: ^0.3.1
   intl: ^0.19.0
   dropdown_button2: ^2.3.9
+  dio: ^5.7.0
+  shimmer: ^3.0.0
+  lottie: ^3.1.2
 
 dev_dependencies:
   flutter_test:
@@ -57,8 +61,10 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
   isar_generator: *isar_version
+  hive_generator: ^2.0.1
   build_runner: any
   analyzer: ^5.13.0
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -71,6 +77,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/lottie/
   fonts:
     - family: nunitobold
       fonts:
