--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   dio: ^5.7.0
   shimmer: ^3.0.0
   lottie: ^3.1.2
+  shared_preferences: ^2.3.2
+  money_formatter: ^0.0.6
 
 dev_dependencies:
   flutter_test:
