app finished version on 10:55 AM

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   lottie: ^3.1.2
   shared_preferences: ^2.3.2
   money_formatter: ^0.0.6
+  share_plus: ^10.0.3
 
 dev_dependencies:
   flutter_test:
