upload data version

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   shared_preferences: ^2.3.2
   money_formatter: ^0.0.6
   share_plus: ^10.0.3
+  permission_handler: ^11.3.1
+
 
 dev_dependencies:
   flutter_test:
@@ -81,6 +83,7 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/lottie/
+    - assets/database/
   fonts:
     - family: nunitobold
       fonts:
