--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   share_plus: ^10.0.3
   permission_handler: ^11.3.1
   wakelock_plus: ^1.2.8
+  change_app_package_name: ^1.4.0
 
 
 dev_dependencies:
