--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   path_provider: ^2.0.15
   path: any
   hive: ^2.2.3
+  hive_flutter: ^1.1.0
   pull_to_refresh_flutter3: ^2.0.2
   popover: ^0.3.1
   intl: ^0.19.0
@@ -54,6 +55,9 @@ dependencies:
   share_plus: ^10.0.3
   permission_handler: ^11.3.1
   wakelock_plus: ^1.2.8
+  flutter_staggered_animations: ^1.1.1
+  flutter_screenutil: ^5.9.3
+  flutter_image_compress: ^2.4.0
 
 
 dev_dependencies:
