--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,3 @@
-
 name: omborchi
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
@@ -59,6 +58,8 @@ dependencies:
   flutter_staggered_animations: ^1.1.1
   flutter_screenutil: ^5.9.3
   flutter_image_compress: ^2.4.0
+  device_info_plus: ^11.3.0
+  cached_memory_image: ^1.5.0
 
 
 dev_dependencies:
