--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   device_info_plus: ^11.3.0
   cached_memory_image: ^1.5.0
   cached_network_image: ^3.4.1
+  image: ^4.5.4
 
 
 dev_dependencies:
