--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,7 +64,8 @@ dependencies:
   cached_network_image: ^3.4.1
   image: ^4.5.4
   workmanager: ^0.5.2
-
+  crypto: ^3.0.7
+  http: ^1.6.0
 
 dev_dependencies:
   flutter_test:
